no bg color in theme toggle

--- a/styleBasic.css
+++ b/styleBasic.css
@@ -167,6 +167,7 @@ footer {
   
   .theme-toggle:hover {
     color: var(--link-color);
+    background-color: unset;
   }
 
 /* Стили для кастомного поля загрузки файлов */
